# https://www.hahack.com/codes/cmake/
cmake_minimum_required(VERSION 3.10)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(readelf elf/hello.c elf/readelf.c)
add_executable(echo_client easy/echo_client.c easy/csapp.h easy/csapp.c)
add_executable(echo_server easy/echo_server.c easy/csapp.h easy/csapp.c)
add_executable(process_server easy/process_server.c easy/csapp.h easy/csapp.c)
add_executable(thread_server easy/thread_server.c easy/csapp.h easy/csapp.c)
add_executable(thread_test1 easy/thread_test1.c easy/csapp.h easy/csapp.c)
add_executable(thread_test2 easy/thread_test2.c easy/csapp.h easy/csapp.c)
TARGET_LINK_LIBRARIES(echo_client pthread)
TARGET_LINK_LIBRARIES(echo_server pthread)
TARGET_LINK_LIBRARIES(process_server pthread)
TARGET_LINK_LIBRARIES(thread_server pthread)
TARGET_LINK_LIBRARIES(thread_test1 pthread)
TARGET_LINK_LIBRARIES(thread_test2 pthread)

add_executable(1.1 easy/1.1.cpp)
add_executable(2.1 easy/2.1.cpp)
add_executable(2.11 easy/2.11.cpp)
add_executable(4.1 easy/4.1.cpp)
add_executable(5.1 easy/5.1.cpp)
add_executable(5.2 easy/5.2.cpp)
add_executable(6.1 easy/6.1.cpp)
add_executable(csim csim/csim.c csim/cachelab.h csim/cachelab.c)
TARGET_LINK_LIBRARIES(csim m)
